--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "docx-templates": "^4.13.0",
     "express": "^4.21.1",
+    "marked": "^14.1.3",
     "node-fetch": "^3.3.2"
   }
 }
