--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "docx-templates": "^4.13.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "marked": "^14.1.3",
     "node-fetch": "^3.3.2"
