--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "axios": "^1.7.7",
     "docx-templates": "^4.13.0",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "marked": "^14.1.3",
-    "node-fetch": "^3.3.2",
-    "ws": "^8.18.0"
+    "node-fetch": "^3.3.2"
   }
 }
