--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.7.7",
     "docx-templates": "^4.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "marked": "^14.1.3",
-    "node-fetch": "^3.3.2"
+    "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
+    "stream": "^0.0.3"
   }
 }
