--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vercel/blob": "^0.25.1",
     "archiver": "^7.0.1",
     "axios": "^1.7.7",
     "docx-templates": "^4.13.0",
