--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@getbrevo/brevo": "^2.2.0",
+    "@sendinblue/client": "^3.3.1",
     "@vercel/blob": "^0.25.1",
     "archiver": "^7.0.1",
     "axios": "^1.7.7",
@@ -19,9 +21,12 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "form-data": "^4.0.1",
     "marked": "^14.1.3",
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.15",
+    "sib-api-v3-sdk": "^8.5.0",
     "stream": "^0.0.3"
   }
 }
