--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "fuse.js": "^7.0.0",
     "marked": "^14.1.3",
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
-    "stream": "^0.0.3"
+    "stream": "^0.0.3",
+    "string-similarity": "^4.0.4"
   }
 }
