--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "marked": "^14.1.3",
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.16",
     "stream": "^0.0.3",
     "string-similarity": "^4.0.4"
   }
